📱🩹 fixing mobile-menu items gap

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -115,7 +115,7 @@ nav .nav-list li {
   .nav-list li {
     margin-left: 0;
     opacity: 0;
-    margin-top: 10px;
+    margin-top: 1rem;
   }
   .link {
     color: #f2f2f2;
@@ -195,7 +195,7 @@ nav .nav-list li {
 
 @media (max-width: 599px) {
   .call-to-action h2 {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
   .call-to-actionp {
     font-size: 0.8rem;
