--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -66,7 +66,7 @@
   .call-to-action{
     
     & h2{
-      font-size: 2.2rem;
+      font-size: 2rem;
     }
 
     &p{
