--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -114,7 +114,7 @@ nav{
     & li{
       margin-left: 0;
       opacity: 0;
-      margin-top: 10px;
+      margin-top: 1rem;
     }
   }
 
